log
Fri 17 Mar 2023 05:58:29 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|6
total_score: 10/70
af9637c
Fri 17 Mar 2023 06:05:31 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:7: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   18 |   aux = a;
      |       ^
exercises.c:20:5: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   20 |   b = aux;
      |     ^
cc1: all warnings being treated as errors
Compilation failed
e1fc74a
Fri 17 Mar 2023 06:05:41 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|6
total_score: 10/70
00cbc23
Fri 17 Mar 2023 06:15:40 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:32:10: error: expected expression before ‘int’
   32 |   *max = int* next(Lista*);
      |          ^~~
exercises.c:33:10: error: expected expression before ‘int’
   33 |   *min = int* first(Lista*);
      |          ^~~
Compilation failed
8c96c56
Fri 17 Mar 2023 06:19:55 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:33:10: error: expected expression before ‘int’
   33 |   *max = int* next(Lista*);
      |          ^~~
exercises.c:34:10: error: expected expression before ‘int’
   34 |   *min = int* first(Lista*);
      |          ^~~
exercises.c: In function ‘asignarValor’:
exercises.c:92:11: error: expected identifier or ‘(’ before ‘[’ token
   92 |     Vector[i] = valor;
      |           ^
Compilation failed
5f37676
Fri 17 Mar 2023 06:21:46 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:33:10: error: expected expression before ‘int’
   33 |   *max = int* next(Lista*);
      |          ^~~
exercises.c:34:10: error: expected expression before ‘int’
   34 |   *min = int* first(Lista*);
      |          ^~~
exercises.c: In function ‘asignarValor’:
exercises.c:92:12: error: incompatible types when assigning to type ‘Vector’ from type ‘int’
   92 |     v[i] = valor;
      |            ^~~~~
Compilation failed
50d005c
Fri 17 Mar 2023 06:26:26 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:33:10: error: expected expression before ‘int’
   33 |   *max = int* next(Lista*);
      |          ^~~
exercises.c:34:10: error: expected expression before ‘int’
   34 |   *min = int* first(Lista*);
      |          ^~~
exercises.c: In function ‘crearPersona’:
exercises.c:57:15: error: expected expression before ‘Persona’
   57 |   scanf("%s", Persona.nombre);
      |               ^~~~~~~
exercises.c:58:15: error: expected expression before ‘Persona’
   58 |   scanf("%s", Persona.rut);
      |               ^~~~~~~
exercises.c:59:15: error: expected expression before ‘Persona’
   59 |   scanf("%d", Persona.edad);
      |               ^~~~~~~
exercises.c: In function ‘asignarValor’:
exercises.c:94:12: error: incompatible types when assigning to type ‘Vector’ from type ‘int’
   94 |     v[i] = valor;
      |            ^~~~~
Compilation failed
bc4838c
Fri 17 Mar 2023 06:31:08 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:33:10: error: expected expression before ‘int’
   33 |   *max = int* next(Lista*);
      |          ^~~
exercises.c:34:10: error: expected expression before ‘int’
   34 |   *min = int* first(Lista*);
      |          ^~~
exercises.c: In function ‘crearPersona’:
exercises.c:58:15: error: expected expression before ‘Persona’
   58 |   scanf("%s", Persona.nombre);
      |               ^~~~~~~
exercises.c:59:15: error: expected expression before ‘Persona’
   59 |   scanf("%s", Persona.rut);
      |               ^~~~~~~
exercises.c:60:15: error: expected expression before ‘Persona’
   60 |   scanf("%d", Persona.edad);
      |               ^~~~~~~
exercises.c: In function ‘crearVector’:
exercises.c:79:49: error: expected ‘)’ before ‘n’
   79 |   Vector * v = (Vector *) malloc(sizeof(Vector * n));
      |                                        ~        ^~
      |                                                 )
exercises.c:79:12: error: unused variable ‘v’ [-Werror=unused-variable]
   79 |   Vector * v = (Vector *) malloc(sizeof(Vector * n));
      |            ^
exercises.c: In function ‘asignarValor’:
exercises.c:93:12: error: incompatible types when assigning to type ‘Vector’ from type ‘int’
   93 |     v[i] = valor;
      |            ^~~~~
cc1: all warnings being treated as errors
Compilation failed
855a0dc
Fri 17 Mar 2023 06:40:00 PM UTC: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:33:10: error: expected expression before ‘int’
   33 |   *max = int* next(Lista*);
      |          ^~~
exercises.c:34:10: error: expected expression before ‘int’
   34 |   *min = int* first(Lista*);
      |          ^~~
exercises.c: In function ‘crearVector’:
exercises.c:77:49: error: expected ‘)’ before ‘n’
   77 |   Vector * v = (Vector *) malloc(sizeof(Vector * n));
      |                                        ~        ^~
      |                                                 )
exercises.c:77:12: error: unused variable ‘v’ [-Werror=unused-variable]
   77 |   Vector * v = (Vector *) malloc(sizeof(Vector * n));
      |            ^
exercises.c: In function ‘asignarValor’:
exercises.c:91:12: error: incompatible types when assigning to type ‘Vector’ from type ‘int’
   91 |     v[i] = valor;
      |            ^~~~~
cc1: all warnings being treated as errors
Compilation failed
fec9f9a
